--- a/biblio/book.html
+++ b/biblio/book.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="js/like.js" defer></script>
-    <script src="js/reviews_visual.js" defer></script>
+    <script src="js/reviews_more_in_collection.js" defer></script>
     <script src="js/book_add_collection.js" defer></script>
     <script src="js/send_com.js" defer></script>
     <script src="js/book_status.js" defer></script>
@@ -22,7 +22,7 @@
                     <button type="submit"></button>
                 </form>
             </div>
-            <a class="btn_auth" href="auth.html">Войти</a>
+            <a class="btn_auth" href="profile.html">Профиль</a>
         </div>
     </header>
 
@@ -122,7 +122,8 @@
 
         <!-- Рецензии книги  -->
         <div class="book_description_title">Рецензии</div>
-        <button class="add_book_col" style="margin-top: 30px;">Написать рецензию</button>
+        <a href="profile_review_create.html">
+            <button class="add_book_col" style="margin-top: 30px;">Написать рецензию</button></a>
         <div class="reviews">
                 <div class="book_review">
                     <div class="book_review_profile">bookworm</div>
@@ -130,7 +131,7 @@
                         <div class="book_review_text">
                             <p>Было бы банальным говорить о том, что "Мастер и Маргарита" - загадочный роман. Я говорю об этом на лекциях уже более 15 лет. Но вот что удивительно: когда на душе сумятица, когда мне плохо, я открываю наугад любую страницу романа и попадаю именно на ту, где мне дается ответ, и настроение улучшается, и становится так хорошо, и я смеюсь и плачу от осознания того, что Булгаков и его роман - часть моей жизни, часть моего существования. Книга всегда рядом - только руку протяни, в ней столько закладок, столько пометок! Нет, не верю я тем людям, которые говорят, что роман не понравился - он просто не открылся для сознания и понимания этому читателю. До чтения романа надо дорасти! Вспоминается случай, когда я встретилась с моим любимым профессором, микробиологом Юрием Ивановичем Сорокиным, и он с таким воодушевлением рассказывал мне, как его сын Аркадий с друзьями всю ночь переписывал самиздатовские страницы романа "Мастер и Маргарита". Было это в 1979 году. Я тогда скромно смолчала и не сказала, что я тоже прочитала роман в самиздатовском исполнении. Прошли годы. Теперь у меня есть 4 издания романа, и я горжусь этим, горжусь тем, что мои коллеги приходят ко мне на лекции, записывают, конспектируют, а члены аттестационной комиссии (почтенные дамы) плакали, когда я рассказывала историю любви Мастера и Маргариты! Этот роман, несомненно, послан нам Богом!
                             </p>
-                            <a href="review.html" class="book_review_alltext">Читать полностью...</a>
+                            <a href="profile_review_full.html" class="book_review_alltext">Читать полностью...</a>
                         </div>
                     </div>
                 </div>
@@ -143,7 +144,7 @@
                                 И вот я перечитала роман уже, в принципе, пережив немало в своей жизни: и потери, и приобретения, и радость, и горе, и разочарование, и любовь, и страсть - в общем стала взрослой. :)
                                 И пришла я к выводу, что это был предсмертный роман. И сколько бы мне ни говорили, что он итог всего творчества Булгакова - неправда . Это роман умирающего человека, размышляющего о том, куда он попадёт после смерти. И попадёт ли куда-то вообще.Есть ли то место куда попадают после смерти.Словно человек смотрит в большое зеркало и пытается найти ответ на то, как он жил и чего достоин: наказания или награды. Каждая линия в романе отражение именно этого состояния поиска и ответов на этот в принципе один-единственный вопрос. Отражение Воланда, Пилата и реальности. И всё это проносится у Мастера, словно в калейдоскопе.
                             </p>
-                            <a href="review.html" class="book_review_alltext">Читать полностью...</a>
+                            <a href="profile_review_full.html.html" class="book_review_alltext">Читать полностью...</a>
                         </div>
                     </div>
                 </div>
@@ -153,7 +154,7 @@
                         <div class="book_review_text">
                             <p>Было бы банальным говорить о том, что "Мастер и Маргарита" - загадочный роман. Я говорю об этом на лекциях уже более 15 лет. Но вот что удивительно: когда на душе сумятица, когда мне плохо, я открываю наугад любую страницу романа и попадаю именно на ту, где мне дается ответ, и настроение улучшается, и становится так хорошо, и я смеюсь и плачу от осознания того, что Булгаков и его роман - часть моей жизни, часть моего существования. Книга всегда рядом - только руку протяни, в ней столько закладок, столько пометок! Нет, не верю я тем людям, которые говорят, что роман не понравился - он просто не открылся для сознания и понимания этому читателю. До чтения романа надо дорасти! Вспоминается случай, когда я встретилась с моим любимым профессором, микробиологом Юрием Ивановичем Сорокиным, и он с таким воодушевлением рассказывал мне, как его сын Аркадий с друзьями всю ночь переписывал самиздатовские страницы романа "Мастер и Маргарита". Было это в 1979 году. Я тогда скромно смолчала и не сказала, что я тоже прочитала роман в самиздатовском исполнении. Прошли годы. Теперь у меня есть 4 издания романа, и я горжусь этим, горжусь тем, что мои коллеги приходят ко мне на лекции, записывают, конспектируют, а члены аттестационной комиссии (почтенные дамы) плакали, когда я рассказывала историю любви Мастера и Маргариты! Этот роман, несомненно, послан нам Богом!
                             </p>
-                            <a href="review.html" class="book_review_alltext">Читать полностью...</a>
+                            <a href="profile_review_full.html.html" class="book_review_alltext">Читать полностью...</a>
                         </div>
                     </div>
                 </div>
@@ -163,7 +164,7 @@
                         <div class="book_review_text">
                             <p>Было бы банальным говорить о том, что "Мастер и Маргарита" - загадочный роман. Я говорю об этом на лекциях уже более 15 лет. Но вот что удивительно: когда на душе сумятица, когда мне плохо, я открываю наугад любую страницу романа и попадаю именно на ту, где мне дается ответ, и настроение улучшается, и становится так хорошо, и я смеюсь и плачу от осознания того, что Булгаков и его роман - часть моей жизни, часть моего существования. Книга всегда рядом - только руку протяни, в ней столько закладок, столько пометок! Нет, не верю я тем людям, которые говорят, что роман не понравился - он просто не открылся для сознания и понимания этому читателю. До чтения романа надо дорасти! Вспоминается случай, когда я встретилась с моим любимым профессором, микробиологом Юрием Ивановичем Сорокиным, и он с таким воодушевлением рассказывал мне, как его сын Аркадий с друзьями всю ночь переписывал самиздатовские страницы романа "Мастер и Маргарита". Было это в 1979 году. Я тогда скромно смолчала и не сказала, что я тоже прочитала роман в самиздатовском исполнении. Прошли годы. Теперь у меня есть 4 издания романа, и я горжусь этим, горжусь тем, что мои коллеги приходят ко мне на лекции, записывают, конспектируют, а члены аттестационной комиссии (почтенные дамы) плакали, когда я рассказывала историю любви Мастера и Маргариты! Этот роман, несомненно, послан нам Богом!
                             </p>
-                            <a href="review.html" class="book_review_alltext">Читать полностью...</a>
+                            <a href="profile_review_full.html.html" class="book_review_alltext">Читать полностью...</a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +174,7 @@
                         <div class="book_review_text">
                             <p>Было бы банальным говорить о том, что "Мастер и Маргарита" - загадочный роман. Я говорю об этом на лекциях уже более 15 лет. Но вот что удивительно: когда на душе сумятица, когда мне плохо, я открываю наугад любую страницу романа и попадаю именно на ту, где мне дается ответ, и настроение улучшается, и становится так хорошо, и я смеюсь и плачу от осознания того, что Булгаков и его роман - часть моей жизни, часть моего существования. Книга всегда рядом - только руку протяни, в ней столько закладок, столько пометок! Нет, не верю я тем людям, которые говорят, что роман не понравился - он просто не открылся для сознания и понимания этому читателю. До чтения романа надо дорасти! Вспоминается случай, когда я встретилась с моим любимым профессором, микробиологом Юрием Ивановичем Сорокиным, и он с таким воодушевлением рассказывал мне, как его сын Аркадий с друзьями всю ночь переписывал самиздатовские страницы романа "Мастер и Маргарита". Было это в 1979 году. Я тогда скромно смолчала и не сказала, что я тоже прочитала роман в самиздатовском исполнении. Прошли годы. Теперь у меня есть 4 издания романа, и я горжусь этим, горжусь тем, что мои коллеги приходят ко мне на лекции, записывают, конспектируют, а члены аттестационной комиссии (почтенные дамы) плакали, когда я рассказывала историю любви Мастера и Маргариты! Этот роман, несомненно, послан нам Богом!
                             </p>
-                            <a href="review.html" class="book_review_alltext">Читать полностью...</a>
+                            <a href="profile_review_full.html.html" class="book_review_alltext">Читать полностью...</a>
                         </div>
                     </div>
                 </div>
