--- a/biblio/profile.html
+++ b/biblio/profile.html
@@ -30,7 +30,7 @@
                 <img class="profile_inf_ava_photo" src="img/ava.png" alt="">
             </div>
             <div class="profile_inf_name">bookworm</div>
-            <a class="profile_inf_bt_edit" href="">Редактировать</a>
+            <a class="profile_inf_bt_edit" href="profile_edit.html">Редактировать</a>
         </div>
 
         <!-- Блок коллекций -->
@@ -75,43 +75,61 @@
                 <img class="arrow_1 left" id="left_1" src="img/arrow_left.png" alt="">
                 <div class="list_books two">
                         <div class="list_book">
-                            <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Мастер и маргарита</div>
+                            <a href="profile_review_full.html">
+                                <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Мастер и маргарита</div>
+                            </a>
+                            
                         </div>
                         <div class="list_book">
+                            <a href="profile_review_full.html">
                             <img src="img/re_2.png" alt="Обложка" class="list_book_img">
                             <div class="list_book_name">Преступление и наказание</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/re_3.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Анна Каренина</div>
+                            <a href="profile_review_full.html">
+                                <img src="img/re_3.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Анна Каренина</div>
+                            </a>
+                            
                         </div>
                         <div class="list_book">
+                            <a href="profile_review_full.html">
+                                <img src="img/re_4.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Маленькие женщины</div>
+                            </a>     
+                        </div>
+                        <div class="list_book">
+                            <a href="profile_review_full.html">
                             <img src="img/re_4.png" alt="Обложка" class="list_book_img">
                             <div class="list_book_name">Маленькие женщины</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/re_4.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Маленькие женщины</div>
+                            <a href="profile_review_full.html">
+                                <img src="img/re_4.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Маленькие женщины</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/re_4.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Маленькие женщины</div>
+                            <a href="profile_review_full.html">
+                                <img src="img/re_4.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Маленькие женщины</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/re_4.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Маленькие женщины</div>
-                        </div>
-                        <div class="list_book">
-                            <img src="img/re_4.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Маленькие женщины</div>
+                            <a href="profile_review_full.html">
+                                <img src="img/re_4.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Маленькие женщины</div>
+                            </a>
                         </div>
                 </div>
                 <img class="arrow_1 rigth" id="right_1" src="img/arrow-rigth.png" alt="">
         </div>
 
         <div class="btn">
-            <a class="profile_bt_all" href="">Показать все</a>
+            <a class="profile_bt_all" href="profile_all_reviews.html">Показать все</a>
         </div>
 
         <!-- Блок - Мои книги -->
