--- a/biblio/profile_all_collections.html
+++ b/biblio/profile_all_collections.html
@@ -18,7 +18,7 @@
                     <button type="submit"></button>
                 </form>
             </div>
-            <a class="btn_auth" href="auth.html">Войти</a>
+            <a class="btn_auth" href="profile.html">Профиль</a>
         </div>
     </header>
 
@@ -36,7 +36,6 @@
                     <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
                     <button class="remove"> Удалить</button>
                 </div>
-                
             </div>
             <div class="list_collection">
                 <img src="img/cover_coll2.png" alt="Обложка" class="list_book_img">
