--- a/biblio/profile_collection.html
+++ b/biblio/profile_collection.html
@@ -45,7 +45,10 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
+                
             </div>
             <div class="list_book">
                 <img src="img/MasterMarg.png" alt="Обложка" class="list_book_img">
@@ -65,7 +68,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_book">
                 <a href="book.html">
@@ -85,7 +90,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_book">
                 <a href="book.html">
@@ -105,7 +112,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_book">
                 <a href="book.html">
@@ -125,7 +134,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_book">
                 <a href="book.html">
@@ -145,7 +156,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_book">
                 <a href="book.html">
@@ -165,7 +178,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
             <div class="list_book">
                 <a href="book.html">
@@ -185,7 +200,9 @@
                         <div class="heart"></div>
                     </div>
                 </div>
-                <button class="remove"> Удалить</button>
+                <div class="center">
+                    <button class="remove"> Удалить</button>
+                </div>
             </div>
         </div> 
     </main>
