add favourites page

--- a/biblio/profile_favourites.html
+++ b/biblio/profile_favourites.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="js/like.js" defer></script>
-    <script src="js/remove_book.js" defer></script>
+    <script src="js/books_more_in_favourites.js" defer></script>
     <title>Библио Апарте</title>
 </head>
 <body>
@@ -24,8 +24,7 @@
     </header>
 
     <main class="container">
-        <div class="main_title" style="margin-top: 5%;">В гостях у психолога</div>
-        <div class="collection_description">Коллекция посвящена моим любимым книгам по психологии</div>
+        <div class="main_title" style="margin-top: 5%;">Избранное</div>
         <div class="collections">
             <div class="list_book">
                 <a href="book.html">
@@ -42,11 +41,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
                 
             </div>
@@ -65,11 +61,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
             <div class="list_book">
@@ -87,11 +80,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
             <div class="list_book">
@@ -109,11 +99,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
             <div class="list_book">
@@ -131,11 +118,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
             <div class="list_book">
@@ -153,11 +137,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
             <div class="list_book">
@@ -175,11 +156,8 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
             <div class="list_book">
@@ -197,14 +175,14 @@
                         <span class="active"></span>
                     </div>
                     <div class="list_book_estimation_like">
-                        <div class="heart"></div>
+                        <div class="heart fill-color"></div>
                     </div>
-                </div>
-                <div class="center">
-                    <button class="remove"> Удалить</button>
                 </div>
             </div>
         </div> 
+        <div class="center">
+            <button class="add_book_col show-more" style="margin-top: 30px;">Показать ещё</button>
+        </div>
     </main>
 
     <footer>
