--- a/biblio/book.html
+++ b/biblio/book.html
@@ -17,7 +17,7 @@
         <div class="header-box">
             <div class="header_title">БиблиоАпарте</div>
             <div class="search">
-                <form>
+                <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
                     <button type="submit"></button>
                 </form>
@@ -34,6 +34,10 @@
                 <div class="book_information_properties">
                     <h3 class="book_information_properties_item">Автор:</h3>
                     <h3 class="book_information_properties_value">Булгаков М.А.</h3>
+                </div>
+                <div class="book_information_properties">
+                    <h3 class="book_information_properties_item">Жанр:</h3>
+                    <h3 class="book_information_properties_value">Художественная литература</h3>
                 </div>
                 <div class="book_information_properties">
                     <h3 class="book_information_properties_item">ISBN:</h3>
