--- a/biblio/profile.html
+++ b/biblio/profile.html
@@ -14,7 +14,7 @@
         <div class="header-box">
             <div class="header_title">БиблиоАпарте</div>
             <div class="search">
-                <form>
+                <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
                     <button type="submit"></button>
                 </form>
@@ -38,29 +38,42 @@
         <div class="wrapper">
                 <img class="arrow_1 left" id="left" src="img/arrow_left.png" alt="">
                 <div class="list_books">
+                    <a href="profile_collection.html">
                         <div class="list_book">
                             <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
                             <div class="list_book_name">Лучше, чем приём у психолога</div>
                         </div>
+                    </a>
+                        
                         <div class="list_book">
-                            <img src="img/cover_coll2.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Пиратские истории</div>
+                            <a href="profile_collection.html">
+                                <img src="img/cover_coll2.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Пиратские истории</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/cover_coll3.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Любимое фэнтези</div>
+                            <a href="profile_collection.html">
+                                <img src="img/cover_coll3.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Любимое фэнтези</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/cover_coll4.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Чтиво на каждый день</div>
+                            <a href="profile_collection.html">
+                                <img src="img/cover_coll4.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Чтиво на каждый день</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Лучше, чем приём у психолога</div>
+                            <a href="profile_collection.html">
+                                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Лучше, чем приём у психолога</div>
+                            </a>
                         </div>
                         <div class="list_book">
-                            <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                            <div class="list_book_name">Лучше, чем приём у психолога</div>
+                            <a href="profile_collection.html">
+                                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                                <div class="list_book_name">Лучше, чем приём у психолога</div>
+                            </a>
                         </div>
                 </div>
                 <img class="arrow_1 rigth" id="right" src="img/arrow-rigth.png" alt="">
@@ -333,12 +346,12 @@
         </div>
 
         <div class="btn">
-            <a class="profile_bt_all" href="">Показать все</a>
+            <a class="profile_bt_all" href="profile_my_book.html">Показать все</a>
         </div>
 
         <!-- Блок - Избранное  -->
 
-        <div class="main_title">Популярное</div>
+        <div class="main_title">Избранное</div>
         <div class="wrapper">
             <img class="arrow left" id="left_3" src="img/arrow_left.png" alt="">
             <div class="list_books four">
@@ -537,7 +550,7 @@
         </div>
         
         <div class="btn">
-            <a class="profile_bt_all" href="">Показать все</a>
+            <a class="profile_bt_all" href="profile_favourites.html">Показать все</a>
         </div>
     </main>
 
