--- a/biblio/profile_all_collections.html
+++ b/biblio/profile_all_collections.html
@@ -13,7 +13,7 @@
         <div class="header-box">
             <div class="header_title">БиблиоАпарте</div>
             <div class="search">
-                <form>
+                <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
                     <button type="submit"></button>
                 </form>
@@ -30,68 +30,84 @@
         <!-- Блок коллекций -->
         <div class="collections">
             <div class="list_collection">
-                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll2.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Пиратские истории</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll2.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Пиратские истории</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll3.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Любимое фэнтези</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll3.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Любимое фэнтези</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll4.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Чтиво на каждый день</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll4.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Чтиво на каждый день</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
             <div class="list_collection">
-                <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
-                <div class="list_book_name">Лучше, чем приём у психолога</div>
-                <div class="buttons">
-                    <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
-                    <button class="remove"> Удалить</button>
-                </div>
+                <a href="profile_collection.html">
+                    <img src="img/cover_coll1.png" alt="Обложка" class="list_book_img">
+                    <div class="list_book_name">Лучше, чем приём у психолога</div>
+                    <div class="buttons">
+                        <a href="profile_collection_edit.html" class="btn-edit">Редактировать</a>
+                        <button class="remove"> Удалить</button>
+                    </div>
+                </a>
             </div>
         </div>       
     </main>
