--- a/biblio/profile_my_book.html
+++ b/biblio/profile_my_book.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="js/like.js" defer></script>
-    <script src="js/remove_book.js" defer></script>
     <script src="js/books_more_in_favourites.js" defer></script>
+    <script src="js/remove_book.js" defer></script>
     <title>Библио Апарте</title>
 </head>
 <body>
@@ -25,8 +25,7 @@
     </header>
 
     <main class="container">
-        <div class="main_title" style="margin-top: 5%;">В гостях у психолога</div>
-        <div class="collection_description">Коллекция посвящена моим любимым книгам по психологии</div>
+        <div class="main_title" style="margin-top: 5%;">Мои книги</div>
         <div class="collections">
             <div class="list_book">
                 <a href="book.html">
