--- a/biblio/registr.html
+++ b/biblio/registr.html
@@ -13,7 +13,7 @@
         <div class="header-box">
             <div class="header_title">БиблиоАпарте</div>
             <div class="search">
-                <form>
+                <form action="profile_search.html">
                     <input type="text" placeholder="Поиск">
                     <button type="submit"></button>
                   </form>
